<resources>
    <string name="app_name">MessengerApp</string>
    <string name="enter_nickname">Enter your nickname</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_job">What I do</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">Not registered?</string>
    <string name="name_placeholder"> </string>
    <string name="message_placeholder"> </string>
    <string name="timestamp_placeholder"> </string>
    <string name="profile_pic_description">Contact profile picture</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar_description">avatar</string>
    <string name="back_button_description">back to home page</string>
    <string name="message_hint">Message</string>
    <string name="send_message">Send message</string>
    <string name="add_contact">Add contact</string>
    <string name="profile_page">profile page</string>
    <string name="home_page">Home page</string>
    <string name="desc1">You did not see nothing</string>
</resources>